feat(progress): add endpoint and progress feature (#48)
##  Summary
- 진행률 관련 구현(브랜치가 꼬여서 처음부터 재 수정)

##  Related Issue

##  Changes
1. Swagger progress 관련 API 설계 등록
  - 강좌 진행 완료 -> 강좌 진행 현황 변경으로 처리
  - 강의 내 강좌 별 진행 엔드포인트 추가

2.  CourseStudy, LectureStudy 도메인 수정
  [AS-IS]
  - PK를 조합(사용자ID+강좌,강의ID)하여 사용
  [TO-BE]
  - PK를 Long형태로 두고 각 도메인에 UserId, CourseId/LectureId 추가
  - CourseStudy -> CourseProgress 수정
  - LectureStudy -> LectureProgress 수정
  - StudyStatus -> ProgressStatus 수정
  - LectureId 생성 메서드 추가
3. 이벤트 와 핸들러 구현
  - 강의 진행률 생성(수강 생성 시)
  - 강의 진행률 삭제(수강 취소 시)
4. Entity, Repository, adapter 임시 구현(실행이 되지 않아서)


##  Discussion Topic
- 의논하고싶은 주제

##  Checklist
- [x] 로컬 테스트 완료
- [ ] lint 통과(로컬)
- [x] 리뷰어 요청(최소 2명), 라벨/스코프 지정
- [x] 브랜치 최신화(rebase) 및 충돌 없음
