# enrollment/src/main/resources/openapi-enrollment.yml
@@ -4,6 +4,7 @@ info:
   version: 1.0.0
   description: "수강 모듈 API 명세"
 paths:
+  # 수강 API
   /enrollments:
     post:
       tags:
@@ -130,6 +131,106 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  # 진행률 API
+  /api-v1/progress/{courseId}:
+    get:
+      tags:
+        - Enrollment
+      summary: 강의 진행률 조회
+      description: 로그인 된 사용자의 수강중인 강의의 전체 진행률을 조회합니다.
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CourseProgressResponse'
+        '404':
+          description: 수강정보를 찾을 수 없음
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EnrollmentNotFoundResponse'
+
+  /api-v1/progress/{courseId}/list:
+    get:
+      tags:
+        - Enrollment
+      summary: 강의 내 강좌별 진행률 조회
+      description: 로그인 된 사용자의 수강중인 강의 내 강좌별 진행률을 조회합니다.
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LectureProgressListResponse'
+        '404':
+          description: 수강정보를 찾을 수 없음
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EnrollmentNotFoundResponse'
+
+  /api-v1/enrollments/progress/{courseId}/{lectureId}:
+    post:
+      tags:
+        - Enrollment
+      summary: 강의 내 강좌 진행도 처리
+      description: 로그인 된 사용자가 수강중인 강의 내 특정 강좌 진행 정도를 업데이트 합니다. 전부 봤을시에는 완료 처리 됩니다.
+      parameters:
+        - name: courseId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: lectureId
+          in: path
+          required: true
+          schema:
+            type: string
+            in: path
+            required: true
+            schema:
+              type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                lastPlayedTime:
+                  type: string
+                  description: 마지막 강좌 진행 시간
+                  example: true
+      responses:
+        '200':
+          description: 성공
+        '400':
+          description: 잘못된 요청(이미 완료 된 강의 / 전체 강의 시간 초과 요청)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IllegalLectureProgressRequestError'
+        '404':
+          description: 강좌 내 강의진행 정보를 찾을 수 없음
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LectureProgressNotFoundError'
 components:
   schemas:
     # ==================== Request ====================
@@ -340,3 +441,70 @@ components:
         - LATEST: 최근 수강 신청순
         - OLDEST: 오래된 수강 신청순
       example: "LATEST"
+
+    # ================== Progress ==================
+    CourseId:
+      type: object
+      properties:
+        courseId:
+          type: string
+          description: 강좌 고유 ID
+
+    CourseProgressResponse:
+      allOf:
+        - $ref: '#/components/schemas/CourseId'
+        - type: object
+          properties:
+            progress:
+              type: number
+              format: float
+              description: 진행률 (0.0 ~ 100.0)
+      description: 강좌 전체 진행률 응답 객체
+
+    LectureProgressListResponse:
+      allOf:
+        - $ref: '#/components/schemas/CourseId'
+        - type: array
+          items:
+            type: object
+            properties:
+              lectureId:
+                type: string
+                description: 강좌 고유 ID
+              lastPlayedTime:
+                type: number
+                format: string
+                description: 마지막 진행했던 시간
+              completed:
+                type: boolean
+                description: 강좌 완료 여부
+
+    EnrollmentNotFoundResponse:
+      type: object
+      properties:
+        code:
+          type: string
+          example: "ENROLLMENT_NOT_FOUND"
+        message:
+          type: string
+          example: "수강 정보를 찾을 수 없습니다."
+
+    LectureProgressNotFoundError:
+      type: object
+      properties:
+        code:
+          type: string
+          example: "LECTURE_PROGRESS_NOT_FOUND"
+        message:
+          type: string
+          example: "강의 진행 정보를 찾을 수 없습니다."
+
+    IllegalLectureProgressRequestError:
+        type: object
+        properties:
+          code:
+            type: string
+            example: "ILLEGAL_LECTURE_PROGRESS_REQUEST"
+          message:
+            type: string
+            example: "잘못된 강의 진행 요청입니다."
